--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+             "node_modules/primeng/resources/themes/saga-blue/theme.css",
+             "node_modules/primeng/resources/primeng.min.css",
+             "node_modules/primeicons/primeicons.css",
+             "src/styles.scss",
+             "src/assets/styles/styles.scss"
             ],
             "scripts": []
           },
@@ -93,12 +97,19 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+             "node_modules/primeng/resources/themes/saga-blue/theme.css",
+             "node_modules/primeng/resources/primeng.min.css",
+             "node_modules/primeicons/primeicons.css",
+             "src/styles.scss",
+             "src/assets/styles/styles.scss"
             ],
             "scripts": []
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
